Do not create two tabs with "gedit --new-window"

Remove call to create extra tab when using 'gedit --new-window'
as new tab is already created when handling the command line.

https://bugzilla.gnome.org/show_bug.cgi?id=673741